--- a/notes/static/notes/css/getit.css
+++ b/notes/static/notes/css/getit.css
@@ -34,6 +34,7 @@ body {
   position: relative;
   display: block;
   padding: 10px 15px;
+  margin-top: 1rem;
   overflow: hidden;
   font-size: 1.1rem;
   border-width: 0;
@@ -75,9 +76,30 @@ body {
   background-color: #f7d736;	
   display: flex;
   flex-direction: row;
-  align-content: center;
+  justify-content: space-between;
+  /* align-content: center; */
   box-shadow: 0 1px 24px rgba(0, 0, 0, 0.75);
   margin-bottom: 2rem;
+  width: 100%;
+}
+
+.title-appbar {
+  display: flex;
+  flex-direction: row;
+}
+
+.tag-appbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-width: 12rem;
+  outline: 0;
+  text-decoration: none;
+  color: black;
+}
+
+.tag-img {
+  width: 3rem;
 }
 
 /* ***** CABECALHO ***** */
@@ -146,6 +168,7 @@ body {
   font-family: "Permanent Marker", cursive;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   
   border-radius: 10px;
   margin:   10px 5px;
@@ -157,23 +180,100 @@ body {
   
 }
 
+.tag-card-text {
+  display: flex;
+  text-decoration: none;
+  color: #2c2c2c;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.h2 {
+  margin: 0;
+}
+
+.back-notes {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-family: "Permanent Marker", cursive;
+  font-size: 1.2rem;
+  padding: 1rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: #2c2c2c;
+  width: fit-content;
+}
+
+.back-home-container {
+  display: flex; 
+  flex-direction: column;
+  margin-top: 3rem;
+}
+
+.back-home {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  font-family: "Permanent Marker", cursive;
+  font-size: 1.2rem;
+  padding: 1rem;
+  margin-left: 1rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: #2c2c2c;
+  width: fit-content;
+  border-radius: 1rem;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
+  background-color: #f7d736;
+}
+
 .card-title{
   font-size: 18px;
   color:#2c2c2c;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 .card-content{
-  height: 100%;
+  /* height: 100%; */
   font-size: 16px;
   font-weight: lighter;
   display: flex;
-  padding: 5px;
+  padding: 1px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color:#4c4c4c;
+}
+
+.card-tag {
+  position: relative;
+  border: 1px solid gray;
+  border-radius: 1rem;
+  padding: 0 1rem;
+
+}
+
+.btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.btn-del {
+  outline: 0;
+  text-decoration: none;
+  border: none;
+  background: none;
+}
+
+.btn-del:hover{
+  cursor: pointer
 }
 
 .card-color-1 {
