--- a/notes/templates/notes/note_view.html
+++ b/notes/templates/notes/note_view.html
@@ -5,7 +5,7 @@
 <div class="appbar">
     <div class="title-appbar">
         <img src="{% static 'notes/img/logo-getit.png' %}" class="logo"/>
-        <p class="subtitle">Como o Post-it, mas com o verbo dos deuses</p>
+        <p class="subtitle main-font">Como o Post-it, mas com o verbo dos deuses</p>
     </div>
 </div>
 
