--- a/notes/templates/notes/tags.html
+++ b/notes/templates/notes/tags.html
@@ -17,11 +17,17 @@
 {% if tags %}
     <div class="tag-container">
     {% for tag in tags %}
-        <div class="card">
-            <a class="tag-card-text" href="{% url 'notes:notes_by_tag' tag.id %}" style="margin: 0;">
+        <!-- <div class="tag-box"> -->
+            <a class="tag-box tag-card-text" href="{% url 'notes:notes_by_tag' tag.id %}">
+                <img src="{% static 'notes/img/tag.png' %}" class="tag-img" />
                 <h2 class="h2">{{ tag.text }}</h2>
+                {% for tag_id, tag_counter in counter.items %}
+                    {% if tag.id == tag_id %}
+                        <p>Post-it's: {{ tag_counter }}</p>
+                    {% endif %}
+                {% endfor %}
             </a>
-        </div>
+        <!-- </div> -->
     {% endfor %}
     </div>
 {% else %}
