--- a/notes/templates/notes/note_view.html
+++ b/notes/templates/notes/note_view.html
@@ -46,12 +46,15 @@
                 maxlength="20" 
                 id="tag" 
                 class="autoresize"
-                placeholder="Tag"
+                placeholder="Tag (opcional)"
                 name="tag"
             />
         {% endif %}
 
-    
+        {% if msg_error %}
+            <p class="msg-error">{{ msg_error }}</p>
+        {% endif %}
+
         <input class="btn" type="submit" name="update" value="Atualizar" />
     </form>
     {% endif %}
