--- a/notes/templates/notes/note_view.html
+++ b/notes/templates/notes/note_view.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<a class="back-notes" href="{% url 'notes:index' %}">
+<a class="back-notes up-effect" href="{% url 'notes:index' %}">
     <img width="24" src="{% static 'notes/img/left-arrow.png' %}">
     <span style="padding-left: 0.3rem;">Voltar</span>
 </a>
