--- a/notes/templates/notes/notes_by_tag.html
+++ b/notes/templates/notes/notes_by_tag.html
@@ -40,7 +40,7 @@
                     </button>
 
                     
-                    <a href="{% url 'notes:note_view' note.id %}">
+                    <a class="btn-edit" href="{% url 'notes:note_view' note.id %}">
                         <img width="24" src="{% static 'notes/img/edit.png' %}"/>
                     </a>
                 </div>
